target/nisarg20/1/usererror.txt
nisarg20/1/userprogram.cpp: In function ‘int main()’:
nisarg20/1/userprogram.cpp:6:1: error: expected initializer before ‘}’ token
 }
 ^
